basic-parallel-filechunk/spring-commandline/src/test/resources/copybooks/good/example.cbl
       01 SAMPLE-REC.
          05 CUSTOMER-ID            PIC X(10).
          05 CUSTOMER-NAME          PIC X(20).
          05 ACCOUNT-NUMBER         PIC 9(9).
          05 ACCOUNT-TYPE           PIC X(2).
          05 OPEN-DATE              PIC 9(8).
          05 BALANCE                PIC S9(7)V99 COMP-3.
          05 CREDIT-LIMIT           PIC S9(7)V99 COMP-3.
          05 STATUS-CODE            PIC X(1).
          05 LAST-ACTIVITY-DATE     PIC 9(8).
          05 RESERVED-FLAG          PIC X(1).

